force-app/main/default/objects/ResourceProject__c/ResourceProject__c.object-meta.xml
<CustomObject>
    <label>ResourceProject</label>
    <nameField>
        <label>ResourceProject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ResourceProjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>