force-app/main/default/objects/ResourceProject__c/validationRules/Project_in_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_in_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Project__r.State__c , &apos;In Progress&apos;))</errorConditionFormula>
    <errorMessage>Resource allocation is not allowed when the Project is on State &quot;In Progress&quot;</errorMessage>
</ValidationRule>