force-app/main/default/objects/ResourceProject__c/validationRules/Resource_Project_End_Date_Must_Be_Within.validationRule-meta.xml
<ValidationRule>
    <fullName>Resource_Project_End_Date_Must_Be_Within</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (Start_Date__c  &lt;  Project__r.Project_Start__c  || Start_Date__c  &gt;  Project__r.Project_End__c) || (End_Date__c &gt; Project__r.Project_End__c ||  End_Date__c &lt; Project__r.Project_Start__c) , true, false)</errorConditionFormula>
    <errorMessage>The resource project end date must be within the project date range. Please adjust the end date to be within the project date range.</errorMessage>
</ValidationRule>